--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
   "author": "Gustav Nikolaj Olsen <gustavnikolaj@gmail.com>",
   "license": "BSD",
   "dependencies": {
-    "express-interceptor": "1.0.0",
-    "react-tools": "=0.10.0"
+    "express-interceptor": "1.0.0"
+  },
+  "peerDependencies": {
+    "react-tools": ">= 0.13.1"
   },
   "devDependencies": {
     "express": "=2.5.11",
     "mocha": "=1.18.2",
+    "passerror": "=1.0.1",
+    "react-tools": "=0.13.1",
     "request": "=2.11.4",
-    "unexpected": "=3.1.7",
-    "passerror": "=1.0.1"
+    "unexpected": "=3.1.7"
   }
 }
