--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "react-tools": ">= 0.13.1"
   },
   "devDependencies": {
-    "express": "2.5.11",
+    "express": "4.12.4",
+    "messy": "6.2.0",
     "mocha": "1.18.2",
     "passerror": "1.0.1",
     "react-tools": "0.13.1",
     "request": "2.11.4",
-    "unexpected": "3.1.7"
+    "unexpected": "7.5.0",
+    "unexpected-express": "6.3.1",
+    "unexpected-messy": "3.0.4"
   }
 }
