--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "express": "4.12.4",
     "jshint": "2.7.0",
     "messy": "6.2.0",
-    "mocha": "1.18.2",
+    "mocha": "2.2.5",
     "react-tools": "0.13.1",
-    "unexpected": "7.5.0",
+    "unexpected": "7.5.1",
     "unexpected-express": "6.3.1",
+    "unexpected-fs": "0.0.2",
     "unexpected-messy": "3.0.4"
   }
 }
