--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Express middleware that transforms jsx on the way out.",
   "main": "lib/jsxtransform.js",
   "scripts": {
+    "coverage": "istanbul --include-all-sources cover _mocha",
     "lint": "jshint . && jscs .",
     "test": "mocha"
   },
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "express": "4.12.4",
+    "istanbul": "0.3.14",
     "jscs": "1.13.1",
     "jshint": "2.7.0",
     "messy": "6.2.0",
