--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: node_js
-sudo: false
-cache:
-  directories:
-  - node_modules
 node_js:
   - 0.10
+script: "npm run-script travis"
+after_success: "<coverage/lcov.info ./node_modules/coveralls/bin/coveralls.js"
