--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.3",
   "description": "Express middleware that transforms jsx on the way out.",
   "main": "lib/jsxtransform.js",
+  "tag": "next",
   "scripts": {
     "coverage": "istanbul --include-all-sources cover _mocha",
     "lint": "jshint . && jscs .",
