--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: node_js
 node_js:
   - 0.10
 script: "npm run-script travis"
+sudo: false
 after_success: "<coverage/lcov.info ./node_modules/coveralls/bin/coveralls.js"
